--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-use": "^15.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
